--- a/Models/SpeechLM/2025.02.19_Slamming.md
+++ b/Models/SpeechLM/2025.02.19_Slamming.md
@@ -185,7 +185,10 @@ We will open-source this package along all models weights and training recipes, 
 
 <table><tr><td width="50%">
 
-With this setup, we systematically analyse and ablate each component of the training pipeline, ultimately refining an optimised cook-book for training \slms. We specifically examine the influence of model family, initialisation, size, and architectural choices (e.g., dropout, positional embedding, etc.). We analyse optimisation parameters and data characteristics. Lastly, we explore alternative training objectives beyond standard next-token prediction, including speech-text interleaving and direct preference optimisation using synthetic data.
+With this setup, we systematically analyse and ablate each component of the training pipeline, ultimately refining an optimised cook-book for training SLMs.
+We specifically examine the influence of model family, initialisation, size, and architectural choices (e.g., dropout, positional embedding, etc.).
+We analyse optimisation parameters and data characteristics.
+Lastly, we explore alternative training objectives beyond standard next-token prediction, including speech-text interleaving and direct preference optimisation using synthetic data.
 
 </td><td>
 
@@ -197,7 +200,10 @@ With this setup, we systematically analyse and ablate each component of the trai
 
 **Hyper-parameters.**
 
-Unless specified otherwise, we use a context length of $512$ tokens and an effective batch size of $256$, employing gradient accumulation when necessary, as preliminary results indicated this configuration yields the best overall performance. We set the peak learning rate to $1e-3$ to enhance training speed and use a warmup period of $1\%$ of the total training steps, as this proved more effective than the fixed $100$-step warmup used in the original TWIST. To improve training stability, particularly with large learning rates, we apply gradient normalisation with a norm of $0.5$ at no additional cost, following~\citet{geiping2023cramming}. Unless modified later in our investigation, we use an inverse-square root scheduler and the AdamW optimiser~\citep{loshchilov2017decoupled}.
+Unless specified otherwise, we use a context length of $512$ tokens and an effective batch size of $256$, employing gradient accumulation when necessary, as preliminary results indicated this configuration yields the best overall performance.
+We set the peak learning rate to $1e-3$ to enhance training speed and use a warmup period of $1\%$ of the total training steps, as this proved more effective than the fixed $100$-step warmup used in the original TWIST.
+To improve training stability, particularly with large learning rates, we apply gradient normalisation with a norm of $0.5$ at no additional cost, following~\citet{geiping2023cramming}.
+Unless modified later in our investigation, we use an inverse-square root scheduler and the AdamW optimiser~\citep{loshchilov2017decoupled}.
 
 </td><td>
 
@@ -206,9 +212,16 @@ Unless specified otherwise, we use a context length of $512$ tokens and an effec
 
 **Initialisation.**
 
-\citet{twist} empirically demonstrated that initialising \slms with pre-trained text \ac{LM}s can enhance convergence speed and improve model performance. We examine the effect of this initialisation within our setup across different model types. To do so, we train multiple models, both with and without TWIST initialisation, while staying within our compute budget. As shown in Figure~\ref{fig:initialisation}, TWIST initialisation benefits all evaluated models at the beginning of training, though its overall impact by the end varies. Notice, the x-axis in Figure~\ref{fig:initialisation} represents theoretical FLOPs, calculated as $6 * N_{params} * D_{tokens}$ following~\citet{hoffmann2022training}. However, due to variations in model architecture and implementation, practical efficiency differs, leading to varying amounts of compute processed within $24$ hours.
+\citet{twist} empirically demonstrated that initialising SLMs with pre-trained text LMs can enhance convergence speed and improve model performance.
+We examine the effect of this initialisation within our setup across different model types.
+To do so, we train multiple models, both with and without TWIST initialisation, while staying within our compute budget.
+As shown in Figure~\ref{fig:initialisation}, TWIST initialisation benefits all evaluated models at the beginning of training, though its overall impact by the end varies.
+Notice, the x-axis in Figure~\ref{fig:initialisation} represents theoretical FLOPs, calculated as $6 * N_{params} * D_{tokens}$ following~\citet{hoffmann2022training}.
+However, due to variations in model architecture and implementation, practical efficiency differs, leading to varying amounts of compute processed within $24$ hours.
 
-Results suggest that benefits of TWIST initialisation can be substantial, especially for top-performing models like Qwen$2.5$. As a result, we prioritise investigations based on existing pre-trained text \ac{LM}s. Interestingly, the results in Figure~\ref{fig:initialisation} demonstrate that Qwen$2.5$ outperforms other models even without TWIST initialisation, perhaps suggesting that their architectural design choices or size might also provide some benefit.
+Results suggest that benefits of TWIST initialisation can be substantial, especially for top-performing models like Qwen$2.5$.
+As a result, we prioritise investigations based on existing pre-trained text LMs.
+Interestingly, the results in Figure~\ref{fig:initialisation} demonstrate that Qwen$2.5$ outperforms other models even without TWIST initialisation, perhaps suggesting that their architectural design choices or size might also provide some benefit.
 
 </td><td>
 
@@ -217,7 +230,17 @@ Results suggest that benefits of TWIST initialisation can be substantial, especi
 
 **Optimal model size \& family.**
 
-\citet{cuervo2024scaling} conducted a scaling analysis on GSLM-style \slms, estimating the optimal model size and token count for a compute-efficient model. However, using a text LM initialisation might impact these findings. As we observe, TWIST initialisation greatly impact model performance, suggesting that prioritising larger models may be more effective than simply increasing the dataset size. Additionally, various model families gain different advantages from TWIST initialisation; for example, Qwen$2.5$ models show significantly better performance compared to OPT models. In Figure~\ref{fig:model_choice}, we compare the results under the pre-defined compute budget within model families\footnote{We use the text LM original names for clarity, but note that the actual size will be notably smaller due to reduced vocabulary size, e.g Qwen$2.5$-$0.5$B has $358$M parameters. Full model sizes can be found in Appendix \ref{sec:model_sizes}.}. We note that the best model sizes for both MobileLLM \cite{mobilellm}, SmolLM$2$ \cite{smollm2} and Pythia \cite{pythia} are $\sim300M$ parameters, while for OPT the best is $125$M. According to \citet{cuervo2024scaling}, the estimated optimal model size is approximately $66$M parameters. However, the best-performing model, Qwen$2.5$, is significantly larger. Since there are no smaller models in this family, it is difficult to determine whether this deviation is due to the quality of the initialisation or other factors. Moving forward, we proceed with both OPT-$125$M and Qwen$2.5$-$0.5$B.
+\citet{cuervo2024scaling} conducted a scaling analysis on GSLM-style SLMs, estimating the optimal model size and token count for a compute-efficient model.
+However, using a text LM initialisation might impact these findings.
+As we observe, TWIST initialisation greatly impact model performance, suggesting that prioritising larger models may be more effective than simply increasing the dataset size.
+Additionally, various model families gain different advantages from TWIST initialisation; for example, Qwen$2.5$ models show significantly better performance compared to OPT models.
+In Figure~\ref{fig:model_choice}, we compare the results under the pre-defined compute budget within model families\footnote{We use the text LM original names for clarity, but note that the actual size will be notably smaller due to reduced vocabulary size, e.g Qwen$2.5$-$0.5$B has $358$M parameters.
+Full model sizes can be found in Appendix \ref{sec:model_sizes}.}.
+We note that the best model sizes for both MobileLLM \cite{mobilellm}, SmolLM$2$ \cite{smollm2} and Pythia \cite{pythia} are $\sim300M$ parameters, while for OPT the best is $125$M.
+According to \citet{cuervo2024scaling}, the estimated optimal model size is approximately $66$M parameters.
+However, the best-performing model, Qwen$2.5$, is significantly larger.
+Since there are no smaller models in this family, it is difficult to determine whether this deviation is due to the quality of the initialisation or other factors.
+Moving forward, we proceed with both OPT-$125$M and Qwen$2.5$-$0.5$B.
 
 </td><td>
 
@@ -226,7 +249,10 @@ Results suggest that benefits of TWIST initialisation can be substantial, especi
 
 **Dropout.**
 
-The original OPT models includes dropout to mitigate overfitting. Although dropout is beneficial for regularisation, it effectively decreases the number of gradient updates per parameter without shortening the update-step wall time. Hence, reduces the number of parameter updates per second. Following \citet{geiping2023cramming}, we experiment with removing dropout and observed improved performance in our setup.
+The original OPT models includes dropout to mitigate overfitting.
+Although dropout is beneficial for regularisation, it effectively decreases the number of gradient updates per parameter without shortening the update-step wall time.
+Hence, reduces the number of parameter updates per second.
+Following \citet{geiping2023cramming}, we experiment with removing dropout and observed improved performance in our setup.
 
 </td><td>
 
@@ -235,7 +261,14 @@ The original OPT models includes dropout to mitigate overfitting. Although dropo
 
 **Positional Encoding.**
 
-Transformers rely on positional encoding to capture the order of input tokens. Many modern LMs, including the Qwen models, use Rotary Position Embedding~\citep{su2023roformerenhancedtransformerrotary}. This method uses a hyperparameter, $\theta$, to control the trade-off between granularity and the ability to handle long contexts. $\theta$ is often tuned to accommodate longer context lengths \citep{qwen2, roziere2023code}. Since our context length is significantly shorter than that of the original LLM, we explore reducing $\theta$ for potential performance gains. Our findings show that setting $\theta=10,000$ with a context length of $1024$ enhances performance, so we adopt this configuration moving forward. We note that since we increase the context length, we need to reduce the batch size as well, to not run into memory problems when training. We reduce the batch size by a half and keep the same amount of gradient accumulation steps, which gives us an effective batch size of $128$.
+Transformers rely on positional encoding to capture the order of input tokens.
+Many modern LMs, including the Qwen models, use Rotary Position Embedding~\citep{su2023roformerenhancedtransformerrotary}.
+This method uses a hyperparameter, $\theta$, to control the trade-off between granularity and the ability to handle long contexts.
+$\theta$ is often tuned to accommodate longer context lengths \citep{qwen2, roziere2023code}.
+Since our context length is significantly shorter than that of the original LLM, we explore reducing $\theta$ for potential performance gains.
+Our findings show that setting $\theta=10,000$ with a context length of $1024$ enhances performance, so we adopt this configuration moving forward.
+We note that since we increase the context length, we need to reduce the batch size as well, to not run into memory problems when training.
+We reduce the batch size by a half and keep the same amount of gradient accumulation steps, which gives us an effective batch size of $128$.
 
 </td><td>
 
@@ -244,9 +277,17 @@ Transformers rely on positional encoding to capture the order of input tokens. M
 
 **Optimiser and Scheduler.**
 
-Various optimisers and schedulers have been developed to enhance training efficiency, reduce memory usage \citep{shazeer2018adafactoradaptivelearningrates, dettmers20228bitoptimizersblockwisequantization}, or accelerate convergence \citep{pagliardini2024ademamix, chen2023lion}. With limited compute, faster convergence and better memory efficiency can be especially important. We first consider efficient optimisers, specifically AdamW with fused kernels, and $8$-bit AdamW, but observe no notable improvements in batch size or runtime compared to standard AdamW. This could do with the relatively small model size, resulting in a minimal memory footprint of the optimisers. We then compare AdamW with two state-of-the-art optimisers: AdaLomo \cite{lv2023adalomo} and AdEMAMeix \citep{pagliardini2024ademamix}. Results, presented in Figure~\ref{fig:optim}, suggest that with the original InverseSqrt scheduler used by \citet{twist}, using AdEMAMeix improves validation loss, compared to AdamW, with AdaLomo far behind.
+Various optimisers and schedulers have been developed to enhance training efficiency, reduce memory usage \citep{shazeer2018adafactoradaptivelearningrates, dettmers20228bitoptimizersblockwisequantization}, or accelerate convergence \citep{pagliardini2024ademamix, chen2023lion}.
+With limited compute, faster convergence and better memory efficiency can be especially important.
+We first consider efficient optimisers, specifically AdamW with fused kernels, and $8$-bit AdamW, but observe no notable improvements in batch size or runtime compared to standard AdamW.
+This could do with the relatively small model size, resulting in a minimal memory footprint of the optimisers.
+We then compare AdamW with two state-of-the-art optimisers: AdaLomo \cite{lv2023adalomo} and AdEMAMeix \citep{pagliardini2024ademamix}.
+Results, presented in Figure~\ref{fig:optim}, suggest that with the original InverseSqrt scheduler used by \citet{twist}, using AdEMAMeix improves validation loss, compared to AdamW, with AdaLomo far behind.
 
-Next, we analyse a cosine decay learning rate scheduler, in place of the original InverseSqrt as this was shown to improve convergence \cite{loshchilov2016sgdr}. We consider the previous optimisers, and provide the validation loss throughout training in Figure~\ref{fig:optim}. We see that this notably improved the loss for AdamW, and slightly harmed results for AdEMAMeix. Overall, AdamW with a cosine schedule provide the best setup, far outperforming the original setup.
+Next, we analyse a cosine decay learning rate scheduler, in place of the original InverseSqrt as this was shown to improve convergence \cite{loshchilov2016sgdr}.
+We consider the previous optimisers, and provide the validation loss throughout training in Figure~\ref{fig:optim}.
+We see that this notably improved the loss for AdamW, and slightly harmed results for AdEMAMeix.
+Overall, AdamW with a cosine schedule provide the best setup, far outperforming the original setup.
 
 </td><td>
 
@@ -256,7 +297,9 @@ Next, we analyse a cosine decay learning rate scheduler, in place of the origina
 
 <table><tr><td width="50%">
 
-Next, we examine how the training data-mix influences performance in a compute-constrained setting. Specifically, we explore whether diversity in accents, speaking styles, etc. is beneficial and assess whether synthetic data can enhance semantic modelling abilities.
+Next, we examine how the training data-mix influences performance in a compute-constrained setting.
+Specifically, we explore whether diversity in accents, speaking styles, etc.
+is beneficial and assess whether synthetic data can enhance semantic modelling abilities.
 
 </td><td>
 
@@ -265,7 +308,16 @@ Next, we examine how the training data-mix influences performance in a compute-c
 
 **Diverse Data.**
 
-We begin by examining how dataset diversity impacts model performance. Many leading speech datasets, such as those based on audiobooks \citep{ls, ll}, consist of relatively clean, single-speaker recordings within a specific content domain. To introduce greater diversity in speaking styles and content, we curate additional datasets, including VoxPopuli \cite{vp}, Tedlium \cite{tedlium}, PeopleSpeech \cite{people}, and SWC \cite{swc}. For all mentioned datasets, we use the official data cleaning and preprocessing scripts when available. Specifically, for Libri-light, we apply the official Voice Activity Detection model to remove silences and generate smaller audio segments. To evaluate the impact of dataset diversity, we compare the performance of \slms trained using our best training recipes using a subset of LibriSpeech and Libri-light against all curated datasets. This comparison is conducted for both OPT-$125$M, which processes a large number of tokens during training, and Qwen-$0.5$B, which encounters significantly less data due to model size. Results are summarised in Table~\ref{tab:data_analysis}. We observe that dataset diversity has an overall negative effect on model performance. We hypothesise this is due to the models struggling in modelling rich and complex audio under such low compute resources.
+We begin by examining how dataset diversity impacts model performance.
+Many leading speech datasets, such as those based on audiobooks \citep{ls, ll}, consist of relatively clean, single-speaker recordings within a specific content domain.
+To introduce greater diversity in speaking styles and content, we curate additional datasets, including VoxPopuli \cite{vp}, Tedlium \cite{tedlium}, PeopleSpeech \cite{people}, and SWC \cite{swc}.
+For all mentioned datasets, we use the official data cleaning and preprocessing scripts when available.
+Specifically, for Libri-light, we apply the official Voice Activity Detection model to remove silences and generate smaller audio segments.
+To evaluate the impact of dataset diversity, we compare the performance of SLMs trained using our best training recipes using a subset of LibriSpeech and Libri-light against all curated datasets.
+This comparison is conducted for both OPT-$125$M, which processes a large number of tokens during training, and Qwen-$0.5$B, which encounters significantly less data due to model size.
+Results are summarised in Table~\ref{tab:data_analysis}.
+We observe that dataset diversity has an overall negative effect on model performance.
+We hypothesise this is due to the models struggling in modelling rich and complex audio under such low compute resources.
 
 </td><td>
 
@@ -274,7 +326,14 @@ We begin by examining how dataset diversity impacts model performance. Many lead
 
 **Synthetic Data.**
 
-Recent studies have highlighted the potential of synthetic data generated through \ac{TTS} \citep{cuervo2024scaling} or direct text-to-unit conversion \citep{scaling_interleaving}. Hence, we examine the impact of including synthetically generated speech within our constrained compute setup. To do so, we synthesised the TinyStories dataset \citep{tinystories} using a single-speaker \ac{TTS} model \citep{wang2021fairseq}, as it is computationally efficient. Additionally, prior research has shown that HuBERT units largely remove speaker information \citep{maimon2023dissc}. TinyStories has been demonstrated to enhance text \ac{LM} performance and improve \slms~\citep{cuervo2024scaling}. Results are presented in Table~\ref{tab:data_analysis}. Results indicate that incorporating such synthetic data into the training data-mix significantly boosts both modelling and generative performance metrics, across all evaluated setups. We also consider adding the synthetic data to the original TWIST recipe, and the results in the bottom of Table \ref{tab:slam} suggests that while this helps with semantic metrics, it is far from enough without other optimisations we introduced.
+Recent studies have highlighted the potential of synthetic data generated through TTS \citep{cuervo2024scaling} or direct text-to-unit conversion \citep{scaling_interleaving}.
+Hence, we examine the impact of including synthetically generated speech within our constrained compute setup.
+To do so, we synthesised the TinyStories dataset \citep{tinystories} using a single-speaker TTS model \citep{wang2021fairseq}, as it is computationally efficient.
+Additionally, prior research has shown that HuBERT units largely remove speaker information \citep{maimon2023dissc}.
+TinyStories has been demonstrated to enhance text LM performance and improve SLMs~\citep{cuervo2024scaling}.
+Results are presented in Table~\ref{tab:data_analysis}.
+Results indicate that incorporating such synthetic data into the training data-mix significantly boosts both modelling and generative performance metrics, across all evaluated setups.
+We also consider adding the synthetic data to the original TWIST recipe, and the results in the bottom of Table \ref{tab:slam} suggests that while this helps with semantic metrics, it is far from enough without other optimisations we introduced.
 
 We see that across all datasets, and specifically with our best mixture Libri-Light, LibriSpeech and sTinyStories, Qwen-$0.5$B outperforms OPT-$125$M so we continue with it to the final stages.
 
@@ -286,11 +345,18 @@ We see that across all datasets, and specifically with our best mixture Libri-Li
 
 <table><tr><td width="50%">
 
-Several recent \slms combine both speech and text modalities, either predicting both simultaneously \citep{defossez2024moshi, fang2024llama, xie2024mini} or training on interleaved data \citep{spiritlm, scaling_interleaving}. Beyond enhancing cross-modal abilities, this has been shown to improve the semantic capabilities of \slms, even in speech-only evaluations. Building on these studies, we investigate whether speech-text interleaving can enhance semantic ability in speech-only tasks, even under strict computational constraints.
+Several recent SLMs combine both speech and text modalities, either predicting both simultaneously \citep{defossez2024moshi, fang2024llama, xie2024mini} or training on interleaved data \citep{spiritlm, scaling_interleaving}.
+Beyond enhancing cross-modal abilities, this has been shown to improve the semantic capabilities of SLMs, even in speech-only evaluations.
+Building on these studies, we investigate whether speech-text interleaving can enhance semantic ability in speech-only tasks, even under strict computational constraints.
 
-For this we use Whisper-large-v3-turbo to get aligned transcriptions of our data, except sTinyStories for which we get alignment from the \ac{TTS}. We follow \citet{scaling_interleaving} by selecting speech spans with length from a Poisson distribution with $\lambda=10$ totalling $30\%$ of the interleaved data. Following \citet{spiritlm} we train with balanced batches regarding token count between text data, speech data and interleaved data. We use a subset of RedPajama \citep{weber2024redpajama} filtered by Gopher \citep{rae2021scaling} rules as our text data.
+For this we use Whisper-large-v3-turbo to get aligned transcriptions of our data, except sTinyStories for which we get alignment from the TTS.
+We follow \citet{scaling_interleaving} by selecting speech spans with length from a Poisson distribution with $\lambda=10$ totalling $30\%$ of the interleaved data.
+Following \citet{spiritlm} we train with balanced batches regarding token count between text data, speech data and interleaved data.
+We use a subset of RedPajama \citep{weber2024redpajama} filtered by Gopher \citep{rae2021scaling} rules as our text data.
 
-We find that under our setup performance is notably worse than speech-only \method in all metrics. We hypothesise that in the \textit{slamming} setup the larger vocabulary (leading to more parameters), and fewer speech tokens led to under-trained models. We leave for future work to find the minimal compute budget to benefit from text-interleaving or to consider other efficient approaches.
+We find that under our setup performance is notably worse than speech-only \method in all metrics.
+We hypothesise that in the \textit{slamming} setup the larger vocabulary (leading to more parameters), and fewer speech tokens led to under-trained models.
+We leave for future work to find the minimal compute budget to benefit from text-interleaving or to consider other efficient approaches.
 
 </td><td>
 
@@ -300,13 +366,28 @@ We find that under our setup performance is notably worse than speech-only \meth
 
 <table><tr><td width="50%">
 
-Preference optimisation methods have been shown to enhance the performance of text LLMs \cite{ouyang2022training} and, more recently, \slms \cite{lin2024alignslm}. With preference optimisation, we aim to train our model to generate outputs that better align with a specified reward function or preference set.
+Preference optimisation methods have been shown to enhance the performance of text LLMs \cite{ouyang2022training} and, more recently, SLMs \cite{lin2024alignslm}.
+With preference optimisation, we aim to train our model to generate outputs that better align with a specified reward function or preference set.
 
-We evaluate how preference optimisation affects \slm performance while considering our constrained computational budget. Using an \textit{off-policy} approach with pre-generated preference data, we apply DPO to enhance training efficiency. Specifically, we synthetically generate the SWAG \citep{swag} text corpus for evaluating semantic knowledge. SWAG consists of text prefixes paired with multiple possible suffixes, where only one is semantically plausible. For preference data, we use the first sentence as the prompt, the correct suffix as the positive continuation, and a randomly chosen incorrect suffix as the rejected continuation. To ensure quality, we filter out samples with repetitive patterns, identified by an auto-BLEU score above $0.3$. We generate all recordings using Kokoro TTS \citep{kokoro}, incorporating four speakers (two male and two female), evenly split between British and American accents. This process results in a total of $47$k SWAG preference pairs.
+We evaluate how preference optimisation affects SLM performance while considering our constrained computational budget.
+Using an \textit{off-policy} approach with pre-generated preference data, we apply DPO to enhance training efficiency.
+Specifically, we synthetically generate the SWAG \citep{swag} text corpus for evaluating semantic knowledge.
+SWAG consists of text prefixes paired with multiple possible suffixes, where only one is semantically plausible.
+For preference data, we use the first sentence as the prompt, the correct suffix as the positive continuation, and a randomly chosen incorrect suffix as the rejected continuation.
+To ensure quality, we filter out samples with repetitive patterns, identified by an auto-BLEU score above $0.3$.
+We generate all recordings using Kokoro TTS \citep{kokoro}, incorporating four speakers (two male and two female), evenly split between British and American accents.
+This process results in a total of $47$k SWAG preference pairs.
 
-For DPO we use $\beta=0.1$ (see Appendix \ref{sec:app_recipe} for full hyperparameters). In initial tests, we observe that after DPO training, the model shows increased likelihood at the cost of repeated patterns, a known issue with DPO~\citep{divpo}. To address this, we apply a repetition penalty with a factor of $1.1$, following the approach of \citet{ctrl}, and find that it helps mitigate the problem. Future work could explore alternative solutions, such as proposed by \citet{divpo}.
+For DPO we use $\beta=0.1$ (see Appendix \ref{sec:app_recipe} for full hyperparameters).
+In initial tests, we observe that after DPO training, the model shows increased likelihood at the cost of repeated patterns, a known issue with DPO~\citep{divpo}.
+To address this, we apply a repetition penalty with a factor of $1.1$, following the approach of \citet{ctrl}, and find that it helps mitigate the problem.
+Future work could explore alternative solutions, such as proposed by \citet{divpo}.
 
-We begin by examining how the allocation of budget for DPO impacts performance, particularly when it comes at the cost of a shorter pre-training phase. Figure~\ref{fig:dpo} depicts the results. We observe significant improvements across all metrics when applying DPO for at least $30$ minutes compared to not using DPO at all. However, allocating a higher proportion of the budget to DPO does not yield further gains and can even degrade model performance. Thus we stick to $30$ minutes out of $24$  hours for DPO, using the rest for pre-training.
+We begin by examining how the allocation of budget for DPO impacts performance, particularly when it comes at the cost of a shorter pre-training phase.
+Figure~\ref{fig:dpo} depicts the results.
+We observe significant improvements across all metrics when applying DPO for at least $30$ minutes compared to not using DPO at all.
+However, allocating a higher proportion of the budget to DPO does not yield further gains and can even degrade model performance.
+Thus we stick to $30$ minutes out of $24$  hours for DPO, using the rest for pre-training.
 
 </td><td>
 
@@ -316,7 +397,13 @@ We begin by examining how the allocation of budget for DPO impacts performance, 
 
 <table><tr><td width="50%">
 
-Building on these empirical findings, we develop the final \method recipe. Using it, we train \slms based on Qwen$2.5$-$0.5$B. We then compare \method to the TWIST model family across various sizes: $350$M, $1.3$B, $7$B, and $13$B. We also present results for TWIST-$350$M using our computational constraints but following TWIST's original training recipe, along with our synthetic data. Finally, we report results for the top-performing model from ~\cite{cuervo2024scaling}, including their predicted optimal performance under our compute budget based on \slm scaling laws. Results are reported in Table~\ref{tab:slam}. The results indicate that \method delivers performance that is either superior or on par with baseline models while requiring significantly fewer computational resources (e.g., a single A$5000$ for a day compared to $160$ days on a V$100$).
+Building on these empirical findings, we develop the final \method recipe.
+Using it, we train SLMs based on Qwen$2.5$-$0.5$B.
+We then compare \method to the TWIST model family across various sizes: $350$M, $1.3$B, $7$B, and $13$B.
+We also present results for TWIST-$350$M using our computational constraints but following TWIST's original training recipe, along with our synthetic data.
+Finally, we report results for the top-performing model from ~\cite{cuervo2024scaling}, including their predicted optimal performance under our compute budget based on SLM scaling laws.
+Results are reported in Table~\ref{tab:slam}.
+The results indicate that \method delivers performance that is either superior or on par with baseline models while requiring significantly fewer computational resources (e.g., a single A$5000$ for a day compared to $160$ days on a V$100$).
 
 </td><td>
 
@@ -326,7 +413,12 @@ Building on these empirical findings, we develop the final \method recipe. Using
 
 <table><tr><td width="50%">
 
-Similarly to \citet{geiping2023cramming}, we analyse whether the proposed approach holds well also in increased compute budget. We opt for $48$ hours on $2$ A$100$ GPUs as a reasonable academic budget for larger scale tests, and represents $\sim10$ times more compute than the \textit{Slamming} setting. We use exactly the same \method recipe for more steps, and increase the batch size times $2$. We provide the full results in Table \ref{tab:scaling}. We note that the performance continues to improve across all metrics, also outperforming methods which have far larger compute scales. We note that DPO training on synthetic data for $2$ epochs, notably boosts performance.
+Similarly to \citet{geiping2023cramming}, we analyse whether the proposed approach holds well also in increased compute budget.
+We opt for $48$ hours on $2$ A$100$ GPUs as a reasonable academic budget for larger scale tests, and represents $\sim10$ times more compute than the \textit{Slamming} setting.
+We use exactly the same \method recipe for more steps, and increase the batch size times $2$.
+We provide the full results in Table \ref{tab:scaling}.
+We note that the performance continues to improve across all metrics, also outperforming methods which have far larger compute scales.
+We note that DPO training on synthetic data for $2$ epochs, notably boosts performance.
 
 </td><td>
 
@@ -336,7 +428,10 @@ Similarly to \citet{geiping2023cramming}, we analyse whether the proposed approa
 
 <table><tr><td width="50%">
 
-In this work we show that training high quality \slms with a very modest compute budget, is feasible. We give these main guidelines: (i) \textbf{Do not skimp on the model} - not all model families are born equal and the TWIST initialisation exaggerates this, thus it is worth selecting a stronger / bigger text-LM even if it means less tokens. we found Qwen$2.5$ to be a good choice; (ii) \textbf{Utilise synthetic training data} - pre-training on data generated with TTS helps a lot; (iii) \textbf{Go beyond next token prediction} - we found that DPO boosts performance notably even when using synthetic data, and as little as $30$ minutes training massively improves results; (iv) \textbf{Optimise hyper-parameters} - as researchers we often dis-regard this stage, yet we found that tuning learning rate schedulers and optimising code efficiency can improve results notably. We hope that these insights, and open source resources will be of use to the research community in furthering research into remaining open questions in \slms.
+In this work we show that training high quality SLMs with a very modest compute budget, is feasible.
+We give these main guidelines: (i) \textbf{Do not skimp on the model} - not all model families are born equal and the TWIST initialisation exaggerates this, thus it is worth selecting a stronger / bigger text-LM even if it means less tokens.
+we found Qwen$2.5$ to be a good choice; (ii) \textbf{Utilise synthetic training data} - pre-training on data generated with TTS helps a lot; (iii) \textbf{Go beyond next token prediction} - we found that DPO boosts performance notably even when using synthetic data, and as little as $30$ minutes training massively improves results; (iv) \textbf{Optimise hyper-parameters} - as researchers we often dis-regard this stage, yet we found that tuning learning rate schedulers and optimising code efficiency can improve results notably.
+We hope that these insights, and open source resources will be of use to the research community in furthering research into remaining open questions in SLMs.
 
 </td><td>
 
